Trying to solve a CSS bug on Safari

--- a/style.css
+++ b/style.css
@@ -688,6 +688,7 @@ img.avatar {
     /* top: 50%; */
     /* left: 50%; */
     margin-right: -50%;
+    -webkit-transform: translate(-50%);
     transform: translate(-50%);
     font-family: 'Raleway', sans-serif;
 }
